--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,5 +1,2 @@
 {% include custom/footer.html %}
-<p>
-<span>Copyright &copy; {{ site.time | date: "%Y" }}  {{ site.author }} -</span>
-<span class="credit">Powered by <a href="http://octopress.org">Octopress</a> using the <a href="https://github.com/fapper/classic-martinb">classic-martinb</a> theme</span>
-</p>
+Design credit: <a href="http://shashankmehta.in/archive/2012/greyshade.html">Shashank Mehta</a>
